samples/errors/array_pop_empty.lox
// Error: arrayPop on empty array should produce runtime error
var a = newArray();
arrayPop(a);
